<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_sending_procedure"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/direct_sample_indirect_sample"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivDirectSample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_pdf"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDirectSampleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/direct_sample"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/ivDirectSample"
            app:layout_constraintTop_toBottomOf="@id/tvTitle2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDirectSampleDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/direct_sample_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivDirectSample"
            app:layout_constraintTop_toBottomOf="@id/tvDirectSampleTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDSPoint1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/image_report"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivDirectSample"
            app:layout_constraintTop_toBottomOf="@id/tvDirectSampleDesc" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDSPoint2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/video_report"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivDirectSample"
            app:layout_constraintTop_toBottomOf="@id/tvDSPoint1" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivInDirectSample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_video"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivDirectSample" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvISDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="40dp"
            android:text="@string/indirect_sample_courier_for_dna_amp_morphology"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivInDirectSample"
            app:layout_constraintTop_toBottomOf="@id/ivDirectSample" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvISPoint1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/collect_the_patient_sample"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivInDirectSample"
            app:layout_constraintTop_toBottomOf="@id/tvISDesc" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvISPoint2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/measure_the_volume"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivInDirectSample"
            app:layout_constraintTop_toBottomOf="@id/tvISPoint1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvISPoint3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/centrifuge_it_in_1500rpm_for_three_minutes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivInDirectSample"
            app:layout_constraintTop_toBottomOf="@id/tvISPoint2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvISPoint4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/remove_the_supernatant_completely_and_add_1ml_normal_saline_in_the_pellet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivInDirectSample"
            app:layout_constraintTop_toBottomOf="@id/tvISPoint3" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvISPoint5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/replace_it_in_a_1ml_cap_vial"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivInDirectSample"
            app:layout_constraintTop_toBottomOf="@id/tvISPoint4" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvISPoint6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/cap_it_and_send_it_through_courier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivInDirectSample"
            app:layout_constraintTop_toBottomOf="@id/tvISPoint5" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvISPoint7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/video_report"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivInDirectSample"
            app:layout_constraintTop_toBottomOf="@id/tvISPoint6" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>